--- a/wiki/Prerequistes.wiki
+++ b/wiki/Prerequistes.wiki
@@ -6,6 +6,7 @@ The GMFTools are based on the following frameworks
 
  * Eclipse Ganymede 3.4 http://www.eclipse.org/downloads/
  * GMF 2.1.0 http://www.eclipse.org/modeling/gmf/
+ * GMF Bridge Trace Plugin
  * openArchitectureWare 4.3 http://wiki.eclipse.org/OAW
 
 You can download a large bundle containing all of these in the download section of
