--- a/wiki/SemiCanonicalDiagramEditPolicy.wiki
+++ b/wiki/SemiCanonicalDiagramEditPolicy.wiki
@@ -27,11 +27,13 @@ ElementViewFilter.filterElementsWithoutViewInParent(result, viewObject);
 
  *Implement the missing abstract methods 
 
-== Enable Dropping of semantic elements on the diagram ==
+== Enable Dropping of Semantic Elements onto the Diagram ==
 
-Register the GenericDiagramDropEditPolicy as DRAG_DROP_ROLE in the generated DEP
+Register the {{{GenericDiagramDropEditPolicy}}} as {{{DRAG_DROP_ROLE}}} in the generated {{{DiagramEditPart}}}.
 
- installEditPolicy(EditPolicyRoles.DRAG_DROP_ROLE, new GenericDiagramDropEditPolicy());
+{{{
+installEditPolicy(EditPolicyRoles.DRAG_DROP_ROLE, new GenericDiagramDropEditPolicy());
+}}}
 
 TODO: This EP collides with the one generated if Shortcuts are enabled. We have to modify the template that generates the DragAndDropEditPolicy for shortcuts.
 
@@ -39,5 +41,6 @@ TODO: Allow dropping elemens that are mapped to connections, not just nodes.
 
 == Add an action that adds all connections that can be created from the semantic model for the selected node ==
 
-Moved to runtime extensions.
+As this action is generic, it has been implemented in {{{de.itemis.gmf.runtime.extensions.actions.AddConnectionsAction}}}.
+
 TODO: multiselection does not work
