--- a/wiki/CustomFiguresAndLayouts.wiki
+++ b/wiki/CustomFiguresAndLayouts.wiki
@@ -1,15 +1,15 @@
 #summary A set of customized figures and layout.
 
 = Custom Figures =
-
-Add your content here.
-
+All figures described here are meant to be referenced in the graph model by means of {{{CustomFigure}} nodes in the figure gallery.
 
 = Custom Layouts =
 
+All layouts described here are meant to be referenced in the graph model by means of {{{CustomLayout}} nodes  in the figure gallery.
+
 == de.itemis.gmf.runtime.layout.ResizableFlowLayout == 
 
-A layout for nodes with compartments that fills the parent figure if it is resized. The FlowLayout created by GMF does not fill the parent figure, resulting in strange views on empty compartments.
+A layout for nodes with compartments that fills the parent figure if it is resized. The {{{FlowLayout}}} created by GMF does not fill the parent figure, resulting in strange looking nodes, especially with empty compartments.
 
 Before:
 [http://gmftools.googlecode.com/svn/wiki/images/without_fill.png]
@@ -18,7 +18,7 @@ After:
 
 == de.itemis.gmf.runtime.layout.ScaleInnerFigureLayout ==
 
-A layout for figures whose bounding box is bigger than the area to raw its children in, e.g. ellipses or diamond figures. These the child area is usually the outer bounds scaled down by a divisor, e.g. sqrt(2) for ellipses and 2 for diamond figures. This number can be provided using the a CustomLayoutAttribute named scaleFactor in the graph model. 
+A layout for figures whose bounding box is bigger than the area to raw its children in, e.g. ellipses or diamond figures. These the child area is usually the outer bounds scaled down by a divisor, e.g. sqrt(2) for ellipses and 2 for diamond figures. This number can be provided using the a {{{CustomLayoutAttribute}}} named {{{scaleFactor}}} in the graph model. 
 
 Before:
 [http://gmftools.googlecode.com/svn/wiki/images/without_scaling.png]
