--- a/wiki/SharedEditingDomain.wiki
+++ b/wiki/SharedEditingDomain.wiki
@@ -66,7 +66,7 @@ You should apply some changes to the GMF generator model. I recommend to use the
 
 ==== MetamodelTypes ====
 
-Only one ElementType per EClass is allowed in the ElementTypeRegistry. If you have multiple representations of the same EClass, you must use one metamodelType and replace the others with specializationTypes referring to the first. You can do that manually in the GMF genmodels or use the 'Harmonize type registrations' action from the de.itemis.gmf.tools plug-in or use the big GMF button GMFTools.
+Only one ElementType per EClass is allowed in the ElementTypeRegistry. If you have multiple representations of the same EClass, you must use one metamodelType and replace the others with specializationTypes referring to the first. You can do that manually in the GMF genmodels or use the 'Harmonize type registrations' popup menu action or use the big GMF button [GMFTools].
 
 === Which changes are made in the templates ===
 
