--- a/wiki/Prerequistes.wiki
+++ b/wiki/Prerequistes.wiki
@@ -21,6 +21,7 @@ org.eclipse.gmf/plugins/org.eclipse.gmf.bridge.trace
 = Setup = 
 
  * Download the sources. This can also be done form within Eclipse using an appropriate SVN plugin.
- * Start eclipse and import the plugin sources
+ * Start Eclipse and import the plug-in sources.
  * Export {{{de.itemis.gmf.tools}}} into as a deployable plug-in into your Eclipse installation.
- * Restart Eclipse
+ * Restart Eclipse.
+ * Import the source of the {{{de.itemis.gmf.runtime.extensions}}} project. 
