--- a/wiki/Prerequistes.wiki
+++ b/wiki/Prerequistes.wiki
@@ -20,7 +20,7 @@ org.eclipse.gmf/plugins/org.eclipse.gmf.bridge.trace
 
 = Setup = 
 
- * Download the sources. This can also be done form within Eclipse using an appropriate SVN plugin.
+ * Download the sources. This can also be done from within Eclipse using an appropriate SVN plugin.
  * Start Eclipse and import the plug-in sources.
  * Export {{{de.itemis.gmf.tools}}} into as a deployable plug-in into your Eclipse installation.
  * Restart Eclipse.
